fixed z-index of header

--- a/client/src/app/components/dashboard/dashboard.component.scss
+++ b/client/src/app/components/dashboard/dashboard.component.scss
@@ -1,3 +1,7 @@
 .mat-drawer {
   width: 250px;
 }
+
+header {
+  z-index: 10;
+}
